Fix checkox alignment in registration form (work in progress)

--- a/style.css
+++ b/style.css
@@ -132,6 +132,10 @@ header {
     color: #333;
 }
 
+#auth-modal form {
+    transition: all 0.3s ease;
+}
+
 #auth-modal input {
     display: block;
     width: 100%;
@@ -168,6 +172,15 @@ header {
 
 .hidden {
     display: none;
+}
+
+#register-form label {
+    display: flex;
+    align-items: flex-start;
+    gap: 0.5rem;
+    max-width: 90%;
+    margin: 1rem auto;
+    line-height: 1.3;
 }
 
 /*KOSZYK Z ZAKUPAMI*/
